--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,42 +1,21 @@
 #root {
-    max-width: 1280px;
+    width: 1920px;
     margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+    height: 100vh;
 }
-
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
+button {
+    outline: none !important;
 }
-.logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
+@media (max-width: 768px) {
+    #root {
+        width: 768px;
+        margin: 0 auto;
     }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-        animation: logo-spin infinite 20s linear;
+@media (max-width: 360px) {
+    #root {
+        width: 360px;
+        margin: 0 auto;
     }
-}
-
-.card {
-    padding: 2em;
-}
-
-.read-the-docs {
-    color: #888;
 }
