--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
     font-weight: 500;
     color: #646cff;
     text-decoration: inherit;
@@ -22,6 +22,7 @@ a:hover {
     color: #535bf2;
 }
 
+*/
 body {
     margin: 0;
     display: flex;
@@ -46,15 +47,15 @@ button {
     cursor: pointer;
     transition: border-color 0.25s;
 }
-button:hover {
-    border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+    outline: none;
+
+    /* outline: 4px auto -webkit-focus-ring-color; */
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
     :root {
         color: #213547;
         background-color: #fff;
@@ -66,3 +67,5 @@ button:focus-visible {
         background-color: #f9f9f9;
     }
 }
+
+*/
