--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,10 +1,15 @@
 #root {
     width: 1920px;
     margin: 0 auto;
-    height: 100vh;
+
+    /* height: 100vh; */
 }
 button {
     outline: none !important;
+}
+select:focus-visible {
+    border-color: #2db100 !important;
+    box-shadow: 0 0 0 1px #2db100 !important;
 }
 @media (max-width: 768px) {
     #root {
