--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,6 +1,6 @@
 html,
 body {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     width: 100%;
 }
 #root {
@@ -38,7 +38,8 @@ select:focus-visible {
 
 @media (max-width: 360px) {
     #root {
-        width: 360px;
+        /* width: 360px; */
+        width: 100%;
         margin: 0 auto;
     }
 }
